--- a/index.couvert.html
+++ b/index.couvert.html
@@ -562,11 +562,19 @@ function buildRangeCalendar(container, state, onApply, onCancel){
 
   const foot=document.createElement("div"); foot.className="cal-foot cal foot";
   const cancel=document.createElement("button"); cancel.className="btn"; cancel.textContent="Cancelar";
-  const apply=document.createElement("button"); apply.className="btn dark"; apply.textContent="Aplicar";
-  cancel.onclick=onCancel;
-  apply.onclick=()=>{ if(state.start && state.end) onApply(state.start, state.end); };
-  foot.appendChild(cancel); foot.appendChild(apply);
-  cal.appendChild(foot);
+  const apply=document.createElement("button"); 
+apply.className="btn dark"; 
+apply.textContent="Aplicar";
+cancel.onclick=onCancel;
+apply.onclick=()=>{ 
+  if(state.start && !state.end){
+    state.end = state.start;   // <<< aqui o truque
+  }
+  if(state.start && state.end) onApply(state.start, state.end); 
+};
+foot.appendChild(cancel); 
+foot.appendChild(apply);
+
 
   container.appendChild(cal);
   updTitle(); drawGrid();
