--- a/index.couvert.html
+++ b/index.couvert.html
@@ -12,22 +12,23 @@
     --brand:#0b1220; --blue:#2563eb; --blue-100:#dbeafe;
   }
   *{box-sizing:border-box; overflow-wrap:anywhere; word-break:break-word}
-  html,body{margin:0;background:var(--bg);font-family:Inter,system-ui,Segoe UI,Arial,sans-serif;color:#0f172a}
+  html,body{margin:0;background:var(--bg);font-family:Inter,system-ui,Segoe UI,Arial,sans-serif;color:var(--text);-webkit-text-size-adjust:100%}
 
   header{background:var(--brand);color:#fff;padding:16px 20px;display:flex;align-items:center}
   header h1{font-size:18px;margin:0;font-weight:800}
 
   .wrap{margin:12px auto;padding:0 16px;width:100%;max-width:100vw}
+
   .grid{display:grid;gap:12px}
   .grid.cols-3{grid-template-columns:repeat(12,minmax(0,1fr))}
   .kpi-card{grid-column:span 4 / span 4}
 
-  .card{background:#fff;border:1px solid var(--line);border-radius:16px;box-shadow:var(--shadow);padding:14px}
-  .muted{color:#64748b}
-  .kpi h3{margin:0 0 4px;font-size:14px;color:#64748b}
+  .card{background:var(--card);border:1px solid var(--line);border-radius:16px;box-shadow:var(--shadow);padding:14px}
+  .muted{color:var(--muted)}
+  .kpi h3{margin:0 0 4px;font-size:14px;color:var(--muted)}
   .kpi .val{font-size:24px;font-weight:800}
 
-  .btn{appearance:none;border:1px solid var(--line);background:#fff;border-radius:12px;padding:10px 12px;font-size:14px;cursor:pointer;font-weight:800}
+  .btn{appearance:none;border:1px solid var(--line);background:#fff;border-radius:12px;padding:10px 12px;font-size:14px;cursor:pointer;font-weight:800;touch-action:manipulation}
   .btn.dark{background:#111827;color:#fff;border-color:#111827}
 
   .table{width:100%;border-collapse:collapse;font-size:13px}
@@ -40,7 +41,8 @@
   .prej{background:#ffecec;color:#7f1d1d;border:1px solid #fecaca}
 
   .chips{display:flex;gap:10px;flex-wrap:wrap;margin-top:6px}
-  .chip{border:1px solid var(--line);padding:8px 12px;border-radius:999px;background:#fff;cursor:pointer;font-weight:800;display:inline-flex;gap:10px;align-items:center}
+  .chip{border:1px solid var(--line);padding:8px 12px;border-radius:999px;background:#fff;cursor:pointer;
+        font-weight:800;display:inline-flex;gap:10px;align-items:center;touch-action:manipulation}
   .chip .amt{font-weight:800;color:#0b1220;opacity:.95}
   .chip .dash{color:#94a3b8}
   .chip.active{background:#0b1220;color:#fff;border-color:#0b1220}
@@ -48,7 +50,7 @@
 
   .pay-break{display:flex;gap:10px;flex-wrap:wrap;margin-top:6px}
   .pill{display:inline-flex;gap:6px;align-items:center;border:1px solid var(--line);border-radius:999px;padding:6px 10px;font-weight:700;background:#fff}
-  .pill .tag{font-size:11px;color:#64748b;font-weight:700;text-transform:uppercase;letter-spacing:.2px}
+  .pill .tag{font-size:11px;color:#muted;font-weight:700;text-transform:uppercase;letter-spacing:.2px}
 
   details.paylist{margin-top:10px;border:1px solid var(--line);border-radius:12px;background:#fff}
   details.paylist > summary{list-style:none;padding:10px 12px;cursor:pointer;font-weight:800}
@@ -57,22 +59,28 @@
   .smalltable th,.smalltable td{border-top:1px solid var(--line);padding:10px 8px;font-size:13px;text-align:left}
   .smallmuted{color:#6b7280;font-size:12px}
 
-  /* POPOVER + OVERLAY */
   .popover{position:fixed;background:#fff;border:1px solid var(--line);border-radius:14px;box-shadow:var(--shadow);
            padding:10px;z-index:60;display:none;width:min(94vw,360px);max-height:80vh;overflow:auto}
-  .overlay{position:fixed;inset:0;background:transparent;display:none;z-index:55}
 
-  /* CALENDÁRIO */
   .cal{width:100%}
   .cal .cal-head{display:flex;align-items:center;justify-content:space-between;padding:6px 8px}
   .cal .cal-grid{display:grid;grid-template-columns:repeat(7,1fr);gap:6px;padding:8px}
-  .cal .dow{font-size:12px;color:#64748b;text-align:center}
+  .cal .dow{font-size:12px;color:var(--muted);text-align:center}
   .cal .day{height:36px;border-radius:10px;display:flex;align-items:center;justify-content:center;cursor:pointer;border:1px solid transparent;font-weight:700}
   .cal .day:hover{background:#f1f5f9}
   .cal .day.out{opacity:.35}
   .cal .day.sel{background:var(--blue);color:#fff}
   .cal .day.range{background:var(--blue-100);color:#111827}
   .cal .foot{display:flex;justify-content:flex-end;gap:8px;padding:8px}
+
+  .modal{position:fixed;inset:0;background:rgba(2,6,23,.5);display:none;z-index:120}
+  .sheet{position:absolute;left:0;right:0;bottom:0;background:#fff;border-radius:20px 20px 0 0;border:1px solid var(--line);
+         box-shadow:var(--shadow);max-height:85vh;display:flex;flex-direction:column}
+  .sheet header{background:#fff;color:#000;padding:12px 16px;border-bottom:1px solid var(--line);border-radius:20px 20px 0 0}
+  .sheet header h3{margin:0;font-size:16px;font-weight:800}
+  .sheet header small{color:#64748b}
+  .sheet .content{overflow:auto;padding:10px 12px}
+  .sheet .close{position:absolute;right:12px;top:10px}
 
   #loading{position:fixed;inset:0;background:rgba(255,255,255,0.85);display:flex;align-items:center;justify-content:center;
            font-size:18px;font-weight:800;color:#0b1220;z-index:100}
@@ -103,7 +111,7 @@
     <div style="margin-top:10px">
       <strong>Empresas:</strong>
       <div id="chipsEmpresas" class="chips"></div>
-      <div id="empLoadMsg" class="muted" style="display:none">Carregando arrecadação (ABC) em segundo plano…</div>
+      <div id="empLoadMsg" class="muted" style="display:none">Carregando arrecadação (ABC)…</div>
     </div>
   </div>
 
@@ -178,10 +186,6 @@
   </div>
 </div>
 
-<!-- overlay para clique-fora -->
-<div class="overlay" id="overlay"></div>
-
-<!-- popovers dos calendários -->
 <div class="popover" id="popPR"></div>
 <div class="popover" id="popAR"></div>
 
@@ -192,13 +196,14 @@ const ABC_URL   = "https://script.google.com/macros/s/AKfycbwMJJ_MV7AQX-Nw2CLGEC
 
 /*** STATE ***/
 const ANO = 2025;
-const EMPRESA_REMAP = [
-  {match:["mercatto"], to:"MERCATTO DELÍCIA"},
-  {match:["delicia"],  to:"DELICIA GOURMET"},
-  {match:["villa","lem"],       to:"VILLA GOURMET LEM"},
-  {match:["villa","barreiras"], to:"VILLA GOURMET BARREIRAS"},
-  {match:["villa"], to:"VILLA GOURMET LEM"},
-];
+
+/* nomes canônicos usados no painel */
+const CANON = {
+  MERCATTO: "MERCATTO DELÍCIA",
+  DELICIA: "DELICIA GOURMET",
+  VILLA_LEM: "VILLA GOURMET LEM",
+  VILLA_BAR: "VILLA GOURMET BARREIRAS",
+};
 
 let pagamentosAll = [];
 let abcAll = [];
@@ -230,10 +235,9 @@ function toISODate(s){
     dt = new Date(s.getFullYear(), s.getMonth(), s.getDate());
   } else {
     const str = String(s).trim();
-    if (/^\d{2}\/\d{2}\/\d{4}$/.test(str)){
-      const [d,m,y] = str.split("/").map(Number);
-      dt = new Date(y, m-1, d);
-    } else {
+    const m = str.match(/(\d{2})\/(\d{2})\/(\d{4})/);
+    if (m){ dt = new Date(+m[3], +m[2]-1, +m[1]); }
+    else {
       const d = new Date(str);
       if (!isNaN(d)) dt = new Date(d.getFullYear(), d.getMonth(), d.getDate());
     }
@@ -246,24 +250,33 @@ function fmtRange(a,b){
   const f = d => new Date(d).toLocaleDateString('pt-BR');
   return `${f(a)} → ${f(b)}`;
 }
-function pickNumber(obj, keys){
-  for(const k of keys){
-    if(obj[k] != null && obj[k] !== "") return cleanNumber(obj[k]);
-  }
-  return 0;
+
+/* normaliza string para comparar sem acentos */
+function norm(s){
+  return String(s||"").toLowerCase().normalize('NFD').replace(/[\u0300-\u036f]/g,'').replace(/\s+/g,' ').trim();
 }
+
+/* mapeia o texto vindo do ABC para os nomes canônicos */
 function remapEmpresaABCfromObj(o){
   const candidates = [
     o.empresa, o.EMPRESA, o.Empresa,
     o.sheet, o.SHEET, o.aba, o.ABA, o.planilha, o.PLANILHA, o.origem, o.ORIGEM
-  ].filter(Boolean).map(s=>String(s).toLowerCase());
+  ].filter(Boolean);
 
-  const full = candidates.join(" ");
-  for(const rule of EMPRESA_REMAP){
-    if(rule.match.every(m => full.includes(m))) return rule.to;
-  }
-  const plain = (candidates[0]||"").replace(/^abc\s+de\s+vendas\s+/i,"").trim();
-  return plain || (o.empresa||o.EMPRESA||"");
+  const all = norm(candidates.join(" "));
+  if (all.includes("mercatto")) return CANON.MERCATTO;
+  if (all.includes("delicia") || all.includes("delicia gourmet")) return CANON.DELICIA;
+  if (all.includes("villa") && all.includes("barreiras")) return CANON.VILLA_BAR;
+  if (all.includes("villa") && (all.includes("lem") || all.includes("luis eduardo"))) return CANON.VILLA_LEM;
+
+  // fallback: tenta a primeira palavra útil
+  const plain = norm(candidates[0]||"");
+  if (plain.includes("mercatto")) return CANON.MERCATTO;
+  if (plain.includes("delicia"))  return CANON.DELICIA;
+  if (plain.includes("barreiras"))return CANON.VILLA_BAR;
+  if (plain.includes("villa") || plain.includes("lem")) return CANON.VILLA_LEM;
+
+  return (o.empresa||o.EMPRESA||o.Empresa||"").trim(); // último recurso
 }
 
 /*** FETCH ***/
@@ -296,7 +309,7 @@ async function fetchABC(ini, fim){
     .map(o=>{
       const emp = remapEmpresaABCfromObj(o);
       const dataIso = toISODate(o.data || o.DATA || o.Data || "");
-      const faturamento = pickNumber(o, ["total_dia","TOTAL_DIA","total","TOTAL"]);
+      const faturamento = cleanNumber(o.total_dia ?? o.TOTAL_DIA ?? o.total ?? o.TOTAL ?? 0);
       return { data: dataIso, empresa: emp, faturamento };
     })
     .filter(x=>{
@@ -396,6 +409,7 @@ function aplicar(){
   const allSelected = (empresasSelecionadas.size===empresas.length);
   const filtroEmp = (empresa)=> allSelected || empresasSelecionadas.has(empresa);
 
+  // PAGAMENTOS
   const pagos = pagamentosAll.filter(p=>{
     const okEmp = filtroEmp(p.empresa);
     const d = p.data_pagamento ? parseISO(p.data_pagamento) : null;
@@ -408,12 +422,14 @@ function aplicar(){
     return okEmp && d && inRange(d,pIni,pFim) && !p.data_pagamento;
   });
 
+  // ABC
   const arrsFiltrados = abcAll.filter(x=>{
     const d = parseISO(x.data);
     const okEmp = x.empresa ? filtroEmp(x.empresa) : true;
     return okEmp && inRange(d,aIni,aFim);
   });
 
+  // Agrupa por data
   const dias = new Map();
   for(const x of arrsFiltrados){
     const key = String(x.data).slice(0,10);
@@ -421,14 +437,16 @@ function aplicar(){
   }
   const totalArr = Array.from(dias.values()).reduce((s,v)=>s+v,0);
 
+  // Totais pagamentos
   const somaPago   = pagos.reduce((s,p)=>s+cleanNumber(p.valor),0);
   const somaApagar = abertos.reduce((s,p)=>s+cleanNumber(p.valor),0);
   const somaTotal  = somaPago + somaApagar;
 
   const resultado  = totalArr - somaTotal;
 
+  // KPIs
   $("#kArrecadacao").textContent = abcLoaded ? brl(totalArr) : "⏳ carregando…";
-  $("#abcStatus").textContent    = abcLoaded ? `(${dias.size} dia(s) no período)` : "Arrecadação sendo carregada em segundo plano";
+  $("#abcStatus").textContent    = abcLoaded ? `(${dias.size} dia(s) no período)` : "Arrecadação sendo carregada…";
   $("#kPagamentos").textContent  = brl(somaTotal);
   $("#kPago").textContent        = brl(somaPago);
   $("#kApagar").textContent      = brl(somaApagar);
@@ -452,7 +470,7 @@ function aplicar(){
 
   // Detalhes pagos
   const tb=$("#tblPagamentos tbody"); tb.innerHTML="";
-  if(pagos.length===0){ $("#msgEmpty").style.display="block"; } else { $("#msgEmpty").style.display="none"; }
+  $("#msgEmpty").style.display = pagos.length? "none":"block";
   pagos.forEach(p=>{
     const tr=document.createElement("tr");
     tr.className="clickable";
@@ -493,9 +511,10 @@ function aplicar(){
   $("#lblAR").textContent = fmtRange(aIni,aFim);
 }
 
-/*** Aplicar filtros ***/
+/*** APLICAR FILTROS (refetch ABC e redesenhar) ***/
 async function applyFilters(){
-  hideAllPopovers();                 // fecha só ao aplicar
+  $("#popPR").style.display = 'none';
+  $("#popAR").style.display = 'none';
   try { await fetchABC(aIni, aFim); } catch(e){ console.warn(e); }
   coletarEmpresas(); renderChips(); aplicar();
 }
@@ -542,7 +561,7 @@ function buildRangeCalendar(container, state, onApply, onCancel){
       else if(inSelRange(date)) el.classList.add('range');
       el.onclick=()=>{ 
         if(!state.start || (state.start && state.end)){ state.start=date; state.end=null; } 
-        else { if(date<state.start){ state.end=state.start; state.start=date; } else { state.end=date; } } 
+        else { if(date<state.start){ state.end=state.start; state.start=date; } else { state.end=date; } }
         drawGrid(); 
       };
       grid.appendChild(el);
@@ -555,7 +574,7 @@ function buildRangeCalendar(container, state, onApply, onCancel){
   const apply=document.createElement("button"); apply.className="btn dark"; apply.textContent="Aplicar";
   cancel.onclick=onCancel;
   apply.onclick=()=>{ 
-    if(state.start && !state.end){ state.end = state.start; }   // 1 dia = intervalo de 1 dia
+    if(state.start && !state.end){ state.end = state.start; } // 1 dia
     if(state.start && state.end) onApply(state.start, state.end); 
   };
   foot.appendChild(cancel); foot.appendChild(apply);
@@ -565,10 +584,9 @@ function buildRangeCalendar(container, state, onApply, onCancel){
   updTitle(); drawGrid();
 }
 
-/*** POPOVER + OVERLAY ***/
+/*** POPOVER POSICIONAMENTO + FECHAMENTO EXTERNO ***/
 function placePopover(pop, anchor){
   pop.style.display = 'block';
-  $("#overlay").style.display = 'block';
   const r = anchor.getBoundingClientRect();
   const PAD = 8;
   const w = Math.min(window.innerWidth * 0.94, 360);
@@ -587,11 +605,15 @@ function placePopover(pop, anchor){
   pop.style.left = left + 'px';
   pop.style.top  = top  + 'px';
 }
-function hideAllPopovers(){
-  $("#popPR").style.display = 'none';
-  $("#popAR").style.display = 'none';
-  $("#overlay").style.display = 'none';
-}
+
+// fecha só ao clicar fora, aplicar ou cancelar
+document.addEventListener('mousedown', (e)=>{
+  const inside = e.target.closest('#popPR, #btnPR, #popAR, #btnAR');
+  if(!inside){
+    $("#popPR").style.display='none';
+    $("#popAR").style.display='none';
+  }
+});
 
 /*** INIT ***/
 (async function init(){
@@ -605,34 +627,29 @@ function hideAllPopovers(){
   const prState={cursor:new Date(pIni.getFullYear(),pIni.getMonth(),1), start:pIni, end:pFim, anchor:$("#btnPR")};
   const arState={cursor:new Date(aIni.getFullYear(),aIni.getMonth(),1), start:aIni, end:aFim, anchor:$("#btnAR")};
 
-  const openPR = ()=>{
-    $("#popAR").style.display = 'none';         // fecha só o outro
-    prState.anchor=$("#btnPR"); prPop.innerHTML="";
+  const openPR = ()=>{ prState.anchor=$("#btnPR"); prPop.innerHTML="";
     buildRangeCalendar(prPop, prState, (start,end)=>{
       pIni=new Date(start); pFim=new Date(end);
       $("#lblPR").textContent=fmtRange(pIni,pFim);
       applyFilters();
-    }, hideAllPopovers);
+    }, ()=> { prPop.style.display="none"; });
+    // abrir um fecha o outro
+    $("#popAR").style.display='none';
     placePopover(prPop, $("#btnPR"));
   };
 
-  const openAR = ()=>{
-    $("#popPR").style.display = 'none';         // fecha só o outro
-    arState.anchor=$("#btnAR"); arPop.innerHTML="";
+  const openAR = ()=>{ arState.anchor=$("#btnAR"); arPop.innerHTML="";
     buildRangeCalendar(arPop, arState, (start,end)=>{
       aIni=new Date(start); aFim=new Date(end);
       $("#lblAR").textContent=fmtRange(aIni,aFim);
       applyFilters();
-    }, hideAllPopovers);
+    }, ()=> { arPop.style.display="none"; });
+    $("#popPR").style.display='none';
     placePopover(arPop, $("#btnAR"));
   };
 
   $("#btnPR").onclick=openPR;
   $("#btnAR").onclick=openAR;
-
-  // clicar fora (overlay) e ESC
-  $("#overlay").onclick = hideAllPopovers;
-  document.addEventListener('keydown', e=>{ if(e.key==='Escape') hideAllPopovers(); });
 
   $("#lblPR").textContent = fmtRange(pIni,pFim);
   $("#lblAR").textContent = fmtRange(aIni,aFim);
